# nerf_tools

./: .gitignore  README.md  bias_distance.py  pyproject.toml  recipe.yaml  setup.py
nerf_tools/: configs.py  plots.py  tools.py
nerf_tools/dataset/: nerf_dataset.py  replicaCAD_dataset.py
nerf_tools/scripts/: check_dataset.py  compute_aabb.py  down_sample_pcd.py  get_pointcloud.py  get_pose_meshlab.py  merge_datasets.py  replica_2_nerf.py  rosbag2nerf.py
nerf_tools/scripts/gsplat/: save_mesh.py
nerf_tools/utils/: colmap_tools.py  depth.py  math.py  meshes.py  timing.py  utils.py
phdtools/dataset/: get_traj_txt.py  nerf_dataset.py  replicaCAD_dataset.py
scripts/: bias_distance.py  check_dataset.py  compute_aabb.py  down_sample_pcd.py  get_pointcloud.py  merge_datasets.py  render_mesh_isdf.py  show_cameras.py  show_frames.py  tsdf_intergration.py
scripts/experiments/: isdf_vs_pcd.py
scripts/gsplat/: save_mesh.py
scripts/ros/: get_tf.py
