[project]
name = "nerf_tools"
version = "0.1.0"  # You can specify a version here
description = "Description of your project"
dependencies = []  # Add dependencies if there are any

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
nerf_tools = { path = ".", editable = true }
open3d="*"
jinja2="*"

[tool.pixi.tasks]


[tool.pixi.dependencies]
numpy="*"
tyro="*"
pytorch="*"
python="3.11.*"
opencv="*"
